# DataIngestion

./: data_ingest.ini  data_ingest.sh  data_ingest_template.conf  main.py  pyproject.toml  requirements.txt
src/: base_data_ingest.py
src/plugins/: comp_data_ingest.ini  comp_data_ingest.py  comp_obs_map.json  cormp_data_ingest.ini  cormp_data_ingest.py  cormp_obs_map.json  lbhmc_data_ingest.ini  lbhmc_data_ingest.py  ndbc_data_ingest_mappings.json  noaa_data_ingest.ini  noaa_data_ingest.py  nos_data_ingest.ini  nos_data_ingest.py  nos_data_ingest_mappings.json
