[tool.poetry]
name = "dataingestion"
version = "0.1.0"
description = ""
authors = ["DANRAMAGE <ChiefDan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
requests = "^2.31.0"
sqlalchemy = "^2.0.29"
geoalchemy2 = "^0.15.1"
xlrd = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
